fix: add example for /auth/mein the swag doc
